# market-data-service

./: .env.example  .gitignore  CLI.md  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  watchlist.txt
data/: coverage.db
data/validation/: validation_2026-03-20.json  validation_2026-04-24.json
docs/: cli-outcomes.md  cli.md
market_data/: cli.py  client.py  config.py  iv_backfill.py  models.py  service.py
market_data/cache/: coverage.py  redis_cache.py
market_data/providers/: alpha_vantage.py  base.py  databento.py  finnhub.py  router.py  tastytrade.py  yfinance_provider.py
market_data/storage/: minio_store.py  timescale.py
market_data/utils/: date_utils.py
migrations/: 001_initial_schema.sql  003_options_enhancements.sql
scripts/: backfill_iv_rank.py  import_databento_options.py  validate_accuracy.py
tests/: conftest.py
tests/integration/: test_alpha_vantage.py  test_data_accuracy.py  test_finnhub.py  test_service.py  test_timescale_integration.py
tests/unit/: test_cli.py  test_cli_contract.py  test_client.py  test_coverage.py  test_date_utils.py  test_minio_store.py  test_models.py  test_providers.py  test_rate_limiter.py  test_redis_cache.py  test_router.py  test_service.py  test_timescale.py
