[tool.poetry]
name = "market-data-service"
version = "0.1.0"
description = "Shared market data layer for trading agent infrastructure"
authors = ["Trading Firm Infra"]
readme = "README.md"
packages = [{include = "market_data"}]

[tool.poetry.scripts]
market-data = "market_data.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.14"
pydantic = "^2.0"
pydantic-settings = "^2.0"
psycopg2-binary = "^2.9"
sqlalchemy = "^2.0"
redis = "^5.0"
minio = "^7.2"
pandas = "^2.0"
pyarrow = "^15.0"
httpx = "^0.27"
websockets = "^13.0"
tenacity = "^8.2"
exchange-calendars = "^4.5"
rich = "^13.0"
databento = ">=0.35"

[tool.poetry.group.scripts.dependencies]
duckdb = ">=0.10"   # used by scripts/import_databento_options.py
yfinance = ">=0.2"  # used by scripts/validate_accuracy.py as independent reference

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
black = "^24.0"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=market_data --cov-report=term-missing"
markers = [
    "integration: marks tests that call real external APIs (deselect with -m 'not integration')",
]
